--- a/Sprint 2/moto_rental/src/main/webapp/index.html
+++ b/Sprint 2/moto_rental/src/main/webapp/index.html
@@ -21,7 +21,7 @@
         </header>
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link activate disabled" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link activate" aria-current="page" href="home.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Catalogo</a>
@@ -34,10 +34,10 @@
                 </ul>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Novedades</a>
+                <a class="nav-link" href="registro.html">Registrese</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="registro.html" tabindex="-1" aria-disabled="true">Registro</a>
+                <a class="nav-link active" href="" tabindex="-1" aria-disabled="true">Equipo</a>
             </li>
         </ul>
 
