--- a/Sprint 2/moto_rental/src/main/webapp/registro.html
+++ b/Sprint 2/moto_rental/src/main/webapp/registro.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <title>Registro de usuario</title>
@@ -19,13 +18,13 @@
     </div>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link desactivate" aria-current="page" href="#">Index</a>
+                    <a class="nav-link desactivate" aria-current="page" href="home.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Rentar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lanzamientos</a>
+                    <a class="nav-link active" href="registro.html">Registrese</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" >Descuentos</a>
@@ -43,31 +42,31 @@
         <form>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Username</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba su nombre de usuario" required>
                 <div id="emailHelp" class="form-text">Escriba su nombre de usuario.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Contrasena</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingrese su contraseña" required>
             </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba su Nombre" required>
                 <div id="emailHelp" class="form-text">Escriba su Nombre.</div>
             </div><!-- comment -->
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Apellidos</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba sus apellidos" required>
                 <div id="emailHelp" class="form-text">Escriba sus Apellidos.</div>
             </div><!-- comment -->
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba su correo electronico" required>
                 <div id="emailHelp" class="form-text">escriba su email.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Saldo</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su saldo inicial" required>
                 <div id="emailHelp" class="form-text">Saldo inicial.</div>
             </div><!-- comment -->
 
@@ -79,7 +78,21 @@
             <button type="submit" class="btn btn-primary">Registrar</button>
         </form>
         </div>
-
+        <hr>
+        <footer class="container py-1">
+            <div class="row">
+              <div class="col-12 col-md">
+                <small class="d-block mb-3 text-muted">&copy; 2022</small>
+              </div>
+                <ul class="list-unstyled text-small">
+                  <li><a class="link-secondary" href="home.html">Home</a></li>
+                  <li><a class="link-secondary" href="registro.html">Registrese</a></li>
+                  <li><a class="link-secondary" href="index.html">Equipo</a></li>
+                  <li><a class="link-secondary" href="#">Terms</a></li>
+                </ul>
+              </div>
+            </div>
+          </footer>
 
     </body>
 </html>
