--- a/Sprint 2/moto_rental/src/main/webapp/home.html
+++ b/Sprint 2/moto_rental/src/main/webapp/home.html
@@ -46,7 +46,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/motos_home/1.jpeg" class="d-block w-100">
+            <img src="img/motos_home/1.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">        
               <h3>Hola</h3>
               <p>Some representative placeholder content for the first slide.</p>
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/motos_home/1.jpeg" class="d-block w-100">
+            <img src="img/motos_home/2.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/motos_home/1.jpeg" class="d-block w-100" alt="...">
+            <img src="img/motos_home/3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
