--- a/Sprint 2/moto_rental/src/main/webapp/registro.html
+++ b/Sprint 2/moto_rental/src/main/webapp/registro.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Registro de usuario</title>
+        <title>Registro de usuario - MotoRental</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">   
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
     </div>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link desactivate" aria-current="page" href="home.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="home.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Rentar</a>
