acualizacion front Sebastian

--- a/Sprint 2/moto_rental/src/main/webapp/home.html
+++ b/Sprint 2/moto_rental/src/main/webapp/home.html
@@ -89,7 +89,7 @@
               <li><a class="link-secondary" href="home.html">Home</a></li>
               <li><a class="link-secondary" href="registro.html">Registrese</a></li>
               <li><a class="link-secondary" href="index.html">Equipo</a></li>
-              <li><a class="link-secondary" href="#">Terms</a></li>
+              <li><a class="link-secondary" href="about.html">Sobre Nosotros</a></li>
             </ul>
           </div>
         </div>
