--- a/Sprint 2/moto_rental/src/main/webapp/index.html
+++ b/Sprint 2/moto_rental/src/main/webapp/index.html
@@ -206,12 +206,8 @@
                             <textarea class="form-control" name="message" rows="5" placeholder="Mensaje"></textarea>
                             <div class="validate"></div>
                         </div>
-                        <div class="mb-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your reservation request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
-                        </div>
-
+                        <br>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
                     </form>
 
                 </div>
@@ -227,7 +223,7 @@
                   <li><a class="link-secondary" href="home.html">Home</a></li>
                   <li><a class="link-secondary" href="registro.html">Registrese</a></li>
                   <li><a class="link-secondary" href="index.html">Equipo</a></li>
-                  <li><a class="link-secondary" href="#">Terms</a></li>
+                  <li><a class="link-secondary" href="about.html">Sobre Nosotros</a></li>
                 </ul>
               </div>
             </div>
