--- a/Sprint 2/moto_rental/src/main/webapp/home.html
+++ b/Sprint 2/moto_rental/src/main/webapp/home.html
@@ -10,34 +10,37 @@
     <link rel = "stylesheet" type="text/css" href="styles/styles_home/styles.css"/>
 </head>
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  <header>
     <div class="container-fluid p-5 bg-dark text-warning text-center">
         <h1>MOTORENTAL</h1> 
         <img src="img/motos/logo moto rental.png" alt=""</img>
     </div>
-
-    </header>
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="home.html" tabindex="-1" aria-disabled="true">Inicio</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogo</a>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Separated link</a></li>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="registro.html">Registrese</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">Equipo</a>
-        </li>
-    </ul>
-
+  </header>
+    <nav>
+      <ul class="nav nav-tabs">
+          <li class="nav-item dropdown">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="home.html" tabindex="-1" aria-disabled="true">Inicio</a>
+          </li>
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogo</a>
+              <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="registro.html">Registrese</a>
+            </li>
+          </li>
+          
+          <li class="nav-item">
+              <a class="nav-link" href="index.html">Equipo</a>
+          </li>
+      </ul>
+    </nav>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
