--- a/Sprint 2/moto_rental/src/main/webapp/registro.html
+++ b/Sprint 2/moto_rental/src/main/webapp/registro.html
@@ -10,8 +10,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
         <header>
-             
         <div class="container-fluid p-5 bg-dark text-warning text-center ">
         <h1>MOTORENTAL </h1> 
         <img src="img/motos/logo moto rental.png" alt=""/>
@@ -53,7 +53,7 @@
                 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba su nombre de usuario" required>
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Contrasena</label>
+                <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingrese su contraseña" required>
             </div>
             <div class="mb-3">
