Actualizacion del Dropdown

--- a/Sprint 2/moto_rental/src/main/webapp/home.html
+++ b/Sprint 2/moto_rental/src/main/webapp/home.html
@@ -37,7 +37,7 @@
           </li>
           
           <li class="nav-item">
-              <a class="nav-link" href="index.html">Equipo</a>
+              <a class="nav-link" href="index.html">Equipos</a>
           </li>
       </ul>
     </nav>
@@ -91,8 +91,8 @@
             <ul class="list-unstyled text-small">
               <li><a class="link-secondary" href="home.html">Home</a></li>
               <li><a class="link-secondary" href="registro.html">Registrese</a></li>
-              <li><a class="link-secondary" href="index.html">Equipo</a></li>
-              <li><a class="link-secondary" href="about.html">Sobre Nosotros</a></li>
+              <li><a class="link-secondary" href="index.html">Equipos</a></li>
+              <li><a class="link-secondary" target="_blank"  href="about.html" >Sobre Nosotros</a></li>
             </ul>
           </div>
         </div>
