--- a/Sprint 2/moto_rental/src/main/webapp/index.html
+++ b/Sprint 2/moto_rental/src/main/webapp/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="registro.html">Registrese</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="" tabindex="-1" aria-disabled="true">Equipo</a>
+                <a class="nav-link active" href="" tabindex="-1" aria-disabled="true">Equipos</a>
             </li>
         </ul>
 
@@ -219,8 +219,8 @@
                 <ul class="list-unstyled text-small">
                   <li><a class="link-secondary" href="home.html">Home</a></li>
                   <li><a class="link-secondary" href="registro.html">Registrese</a></li>
-                  <li><a class="link-secondary" href="index.html">Equipo</a></li>
-                  <li><a class="link-secondary" href="about.html">Sobre Nosotros</a></li>
+                  <li><a class="link-secondary" href="index.html">Equipos</a></li>
+                  <li><a class="link-secondary" target="_blank"  href="about.html" >Sobre Nosotros</a></li>
                 </ul>
               </div>
             </div>
