--- a/Sprint 3/moto_rental/src/main/webapp/home.html
+++ b/Sprint 3/moto_rental/src/main/webapp/home.html
@@ -31,14 +31,14 @@
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Separated link</a></li>
               </ul>
-              <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registrese</a>
-            </li>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link" href="registro.html">Registrese</a>
+          </li>
           <li class="nav-item">
               <a class="nav-link" href="index.html">Equipos</a>
           </li>
+          
       </ul>
     </nav>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
@@ -53,15 +53,15 @@
             <div class="carousel-caption d-none d-md-block">        
               <h3>Hola</h3>
               <p>Some representative placeholder content for the first slide.</p>
-              <button type="button" class="btn btn-info btn-lg" >First slide label</button>
+              <a href="login.html" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/motos_home/2.jpg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
+              <h5>¿YA TIENES UNA CUENTA?</h5>
               <p>Some representative placeholder content for the second slide.</p>
-              <button type="button" class="btn btn-info btn-lg" >First slide label</button>
+              <a target="_blank" href="login.html" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">INGRESA A TU CUENTA</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -69,7 +69,7 @@
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
-              <button type="button" class="btn btn-info btn-lg" >First slide label</button>
+              <a href="#" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
             </div>
           </div>
         </div>
