--- a/Sprint 3/moto_rental/src/main/webapp/home.html
+++ b/Sprint 3/moto_rental/src/main/webapp/home.html
@@ -53,7 +53,7 @@
             <div class="carousel-caption d-none d-md-block">        
               <h3>Hola</h3>
               <p>Some representative placeholder content for the first slide.</p>
-              <a href="login.html" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
+              <a href="#" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
             </div>
           </div>
           <div class="carousel-item">
