--- a/Sprint 2/moto_rental/src/main/webapp/home.html
+++ b/Sprint 2/moto_rental/src/main/webapp/home.html
@@ -10,37 +10,34 @@
     <link rel = "stylesheet" type="text/css" href="styles/styles_home/styles.css"/>
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-  <header>
     <div class="container-fluid p-5 bg-dark text-warning text-center">
         <h1>MOTORENTAL</h1> 
         <img src="img/motos/logo moto rental.png" alt=""</img>
     </div>
-  </header>
-    <nav>
-      <ul class="nav nav-tabs">
-          <li class="nav-item dropdown">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="home.html" tabindex="-1" aria-disabled="true">Inicio</a>
-          </li>
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogo</a>
-              <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Separated link</a></li>
-              </ul>
-              <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registrese</a>
-            </li>
-          </li>
-          
-          <li class="nav-item">
-              <a class="nav-link" href="index.html">Equipos</a>
-          </li>
-      </ul>
-    </nav>
+
+    </header>
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="home.html" tabindex="-1" aria-disabled="true">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Productos</a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="registro.html">Registrese</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Equipo</a>
+        </li>
+    </ul>
+
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -49,7 +46,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/motos_home/1.jpg" class="d-block w-100">
+            <img src="img/motos_home/1.jpeg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">        
               <h3>Hola</h3>
               <p>Some representative placeholder content for the first slide.</p>
@@ -57,7 +54,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/motos_home/2.jpg" class="d-block w-100">
+            <img src="img/motos_home/1.jpeg" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
@@ -65,7 +62,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/motos_home/3.jpg" class="d-block w-100" alt="...">
+            <img src="img/motos_home/1.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -91,8 +88,8 @@
             <ul class="list-unstyled text-small">
               <li><a class="link-secondary" href="home.html">Home</a></li>
               <li><a class="link-secondary" href="registro.html">Registrese</a></li>
-              <li><a class="link-secondary" href="index.html">Equipos</a></li>
-              <li><a class="link-secondary" target="_blank"  href="about.html" >Sobre Nosotros</a></li>
+              <li><a class="link-secondary" href="index.html">Equipo</a></li>
+              <li><a class="link-secondary" href="#">Terms</a></li>
             </ul>
           </div>
         </div>
