--- a/Sprint 3/moto_rental/src/main/webapp/home.html
+++ b/Sprint 3/moto_rental/src/main/webapp/home.html
@@ -22,7 +22,7 @@
           <li class="nav-item dropdown">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="home.html" tabindex="-1" aria-disabled="true">Inicio</a>
-          </li>
+            </li>
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogo</a>
               <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -31,14 +31,16 @@
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Separated link</a></li>
               </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Ingresar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="registro.html">Registrese</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Equipos</a>
+            </li>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="registro.html">Registrese</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="index.html">Equipos</a>
-          </li>
-          
       </ul>
     </nav>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
