--- a/Sprint 3/moto_rental/src/main/webapp/index.html
+++ b/Sprint 3/moto_rental/src/main/webapp/index.html
@@ -28,13 +28,16 @@
                     <li><a class="dropdown-item" href="#">Something else here</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Separated link</a></li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registrese</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="" tabindex="-1" aria-disabled="true">Equipos</a>
+                </ul> 
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Ingresar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="registro.html">Registrese</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="" tabindex="-1" aria-disabled="true">Equipos</a>
+                </li>
             </li>
         </ul>
 
