--- a/Sprint 3/moto_rental/src/main/webapp/about.html
+++ b/Sprint 3/moto_rental/src/main/webapp/about.html
@@ -29,12 +29,15 @@
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Separated link</a></li>
                 </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registrese</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Equipos</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Ingresar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="registro.html">Registrese</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Equipos</a>
+                </li>
             </li>
         </ul>
     </header>
