correcion de dropdown

--- a/Sprint 3/moto_rental/src/main/webapp/about.html
+++ b/Sprint 3/moto_rental/src/main/webapp/about.html
@@ -23,14 +23,15 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogo</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">Marca</a></li>
+                    <li><a class="dropdown-item" href="#">Cilindraje</a></li>
+                    <li><a class="dropdown-item" href="#">Modelo</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Separated link</a></li>
+                    <li><a class="dropdown-item" href="#">Novedades</a></li>
+                    <li><a class="dropdown-item" href="#">Exclusivas</a></li>
                 </ul>
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html">Ingresar</a>
+                    <a class="nav-link" target = "_blank" href="login.html">Ingresar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="registro.html">Registrese</a>
