--- a/Sprint 3/moto_rental/src/main/webapp/home.html
+++ b/Sprint 3/moto_rental/src/main/webapp/home.html
@@ -25,9 +25,9 @@
             </li>
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogo</a>
               <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Marca</a></li>
-                  <li><a class="dropdown-item" href="#">Cilindraje</a></li>
-                  <li><a class="dropdown-item" href="#">Modelo</a></li>
+                  <li><a class="dropdown-item" href="tables/marca.html">Marca</a></li>
+                  <li><a class="dropdown-item" href="tables/cilindraje.html">Cilindraje</a></li>
+                  <li><a class="dropdown-item" href="tables/modelo.html">Modelo</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Novedades</a></li>
                   <li><a class="dropdown-item" href="#">Exclusivas</a></li>
