--- a/Sprint 3/moto_rental/src/main/webapp/index.html
+++ b/Sprint 3/moto_rental/src/main/webapp/index.html
@@ -9,7 +9,7 @@
         <link rel= "icon" href ="img/miniLogo.png" >
 
     </head>
-    <div class="container-fluid p-5 bg-dark text-warning text-center ">
+    <div class="container-fluid p-5 bg-dark text-warning text-center">
         <h1>MOTORENTAL </h1> 
         <img src="img/motos/logo moto rental.png" alt=""/>
     </div>
@@ -23,9 +23,9 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Catalogo</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Marca</a></li>
-                    <li><a class="dropdown-item" href="#">Cilindraje</a></li>
-                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                    <li><a class="dropdown-item" href="tables/marca.html">Marca</a></li>
+                    <li><a class="dropdown-item" href="tables/cilindraje.html">Cilindraje</a></li>
+                    <li><a class="dropdown-item" href="tables/modelo.html">Modelo</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Novedades</a></li>
                     <li><a class="dropdown-item" href="#">Exclusivas</a></li>
