--- a/Sprint 3/moto_rental/src/main/webapp/registro.html
+++ b/Sprint 3/moto_rental/src/main/webapp/registro.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Registro de usuario - MotoRental</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">   
@@ -24,9 +25,9 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogo</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Marca</a></li>
-                    <li><a class="dropdown-item" href="#">Cilindraje</a></li>
-                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                    <li><a class="dropdown-item" href="tables/marca.html">Marca</a></li>
+                    <li><a class="dropdown-item" href="tables/cilindraje.html">Cilindraje</a></li>
+                    <li><a class="dropdown-item" href="tables/modelo.html">Modelo</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Novedades</a></li>
                     <li><a class="dropdown-item" href="#">Exclusivas</a></li>
@@ -80,7 +81,7 @@
 
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Quiere ser Premium</label>
+                <label class="form-check-label" for="exampleCheck1">Quiero ser Premium</label>
             </div>
             <br>
             <button type="submit" class="btn btn-primary">Registrar</button>
@@ -101,6 +102,5 @@
               </div>
             </div>
           </footer>
-
     </body>
 </html>
