--- a/Sprint 3/moto_rental/src/main/webapp/login.html
+++ b/Sprint 3/moto_rental/src/main/webapp/login.html
@@ -8,11 +8,12 @@
     <link rel= "icon" href ="img/miniLogo.png" >
     <link rel = "stylesheet" type="text/css"  href="styles/styles_login/styles.css"/>
     <title>Login - MotoRental</title>
-</head>
+    <script src="js/index.js"></script>
+    </head>
 <body class="text-center">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <main class="form-signin w-100 m-auto">
-        <form>
+        <form id="form-login">
           <img class="mb-4" src="img/motos/logo moto rental.png" alt="" width="72" height="57">
           <h1 class="h3 mb-3 fw-normal">Login</h1>
       
